[project]
name = "firstcrew"
version = "0.1.0"
description = "firstcrew using crewAI"
authors = [{ name = "Mridul", email = "mpahw002@fiu.edu" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
firstcrew = "firstcrew.main:run"
run_crew = "firstcrew.main:run"
train = "firstcrew.main:train"
replay = "firstcrew.main:replay"
test = "firstcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
